--- a/src/pages/atendimento/atendimento.html
+++ b/src/pages/atendimento/atendimento.html
@@ -5,16 +5,14 @@
 </ion-header>
 
 <ion-content>
-  <div id="info" padding>
-    <!-- <img src="assets/icon/atendimento.png" alt="Icone atendimento">
-    <p>Insira seu CEP para localizar a unidade de atendimento CRAS mais próxima</p> -->
-    <!-- <ion-input type="text"></ion-input> -->
-    <!-- <button ion-button color="light">Acessar</button> -->
+  <div id="head-content" padding>
+    <img src="assets/image/map.svg" alt="Icone atendimento">
+    <p>Insira seu CEP para localizar a unidade de atendimento CRAS mais próxima</p>
+    <ion-item>
+      <ion-label>CEP</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <button ion-button color="secondary" small>Procurar</button>
   </div>
-  <ion-card>
-    <ion-card-header color="md_gray_600">Unidades de atendimento</ion-card-header>
-    <ion-card-content>
-      <!-- empty -->
-    </ion-card-content>
-  </ion-card>
+ <div #previewmap id="preview-map"></div>
 </ion-content>
